svc-ruoyi-ui.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-ui
  labels:
    app: ruoyi-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruoyi-ui
  template:
    metadata:
      labels:
        app: ruoyi-ui
    spec:
      containers:
      - name: ruoyi-ui
        image: 10.150.36.72:5000/ruoyi-ui:v3.8
        ports:
        - containerPort: 80
      volumeMounts:
      - mountPath: /etc/nginx/conf.d
        name: config 
      volumes: 
        - name: config 
          configMap:
            name: ruoyi-ui-config
            items: 
              - key: nginx.conf
                path: default.conf
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: ruoyi-ui
spec:
  type: NodePort
  selector:
    app: ruoyi-ui
  ports:
    - nodePort: 30080
      port: 80
      targetPort: 80
